@@ -23,7 +23,11 @@ firstrun=0
 [DAV]
 
 # Verbose?
+# verbose enabled is like loglevel = INFO
 verbose = 1
+
+#log level : DEBUG, INFO, WARNING, ERROR, CRITICAL (Default is WARNING)
+#loglevel = WARNING
 
 # main directory 
 directory = /home/spamies/tmp
